# cpp-raytracer-sfml

./: CMakeLists.txt  readme.md
src/: Renderer.cpp  Renderer.hpp  color.h  drawShape.cpp  drawShape.hpp  main.cpp  ray.h  util.h  vec3.h
